@@ -16,29 +16,28 @@
 
     <repositories>
 <!--        <repository>-->
-<!--            <id>repo</id>-->
-<!--            <url>file://${project.basedir}/../../repo/</url>-->
+<!--            <id>github-nasp</id>-->
+<!--            <url>https://maven.pkg.github.com/cisco-open/nasp</url>-->
+<!--            <snapshots>-->
+<!--                <enabled>true</enabled>-->
+<!--            </snapshots>-->
 <!--        </repository>-->
-        <repository>
-            <id>github-nasp</id>
-            <url>https://maven.pkg.github.com/cisco-open/nasp</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
+            <repository>
+                <id>repo</id>
+                <url>file://${basedir}/../../repo</url>
+            </repository>
     </repositories>
     <dependencies>
 <!--        <dependency>-->
-<!--            <groupId>nasp</groupId>-->
+<!--            <groupId>com.cisco.nasp</groupId>-->
 <!--            <artifactId>nasp</artifactId>-->
-<!--            <version>0.0.0</version>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>${basedir}/../../repo/nasp/nasp/0.0.0/nasp-0.0.0.jar</systemPath>-->
+<!--            <version>2.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
         <dependency>
-            <groupId>com.cisco.nasp</groupId>
+            <groupId>nasp</groupId>
             <artifactId>nasp</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>0.0.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -49,6 +48,9 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -65,7 +67,7 @@
                 <configuration>
                     <artifactSet>
                         <includes>
-                            <include>com.cisco.nasp:nasp</include>
+                            <include>nasp:nasp</include>
                         </includes>
                     </artifactSet>
                 </configuration>
